fixes spacing and adds missing semicolons

--- a/public/styles/site/_component-card.scss
+++ b/public/styles/site/_component-card.scss
@@ -166,8 +166,8 @@
     	font-size: 1.3em;
 	}
 
-	&--medium-margin-above{
-		margin-top: 1.5em
+	&--medium-margin-above {
+		margin-top: 1.5em;
 	}
 }
 
@@ -176,7 +176,7 @@
 	line-height: 1.3em;
 
 	&--bold {
-		font-weight: 600
+		font-weight: 600;
 	}
 }
 
